test_data/neg/ss/655286/Windows/655286.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 0.997 
   2 K * 0.959 
   3 L * 0.837 
   4 L * 0.706 
   5 T * 0.601 
   6 H * 0.529 
   7 V . 0.472 
   8 C . 0.397 
   9 H . 0.330 
  10 Y . 0.273 
  11 C . 0.223 
  12 S . 0.178 
  13 F . 0.149 
  14 S . 0.120 
  15 F . 0.096 
  16 F . 0.082 
  17 T . 0.070 
  18 R . 0.062 
  19 K . 0.056 
  20 F . 0.052 
  21 D . 0.051 
  22 V . 0.050 
  23 F . 0.050 
  24 G . 0.049 
  25 A . 0.048 
  26 I . 0.046 
  27 T . 0.045 
  28 K . 0.046 
  29 K . 0.046 
  30 D . 0.046 
  31 T . 0.046 
  32 P . 0.047 
  33 V . 0.051 
  34 V . 0.054 
  35 F . 0.057 
  36 C . 0.061 
  37 P . 0.070 
  38 T . 0.089 
  39 C . 0.123 
  40 G . 0.174 
  41 N . 0.203 
  42 Q . 0.217 
  43 S . 0.221 
  44 L . 0.222 
  45 S . 0.227 
  46 V . 0.251 
  47 S . 0.300 
  48 H . 0.390 
  49 I * 0.548 
  50 E * 0.755 
  51 E * 0.903 
  52 E * 0.971 
  53 I * 0.995 
  54 R * 0.999 
